--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,10 +19,15 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
-        format_sql: true
+        format_sql: false
+        show-sql: false
         id:
           new_generator_mappings: false
-
+#logging:
+#  level:
+#     org:
+#       hibernate:
+#         type: trace
 server:
    port: 8080 # This is the default port anyway, but you can change it here
 
