--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
       prefix: /WEB-INF/jsp/
       suffix: .jsp
   datasource:
-    url: jdbc:mysql://localhost:3306/hikari-jwt?useSSL=false
+    url: jdbc:mysql://172.30.86.4:3307/hikari_jwt?useSSL=false
     username: root
-    password: 
+    password: hikari29
   tomcat:
     max-wait: 20000
     max-active: 50
@@ -15,7 +15,7 @@ spring:
     min-idle: 15
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
